--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "cd backend && node app.js",
-    "install": "cd backend && npm install",
-    "build": "cd frontend && npm run build"
+    "install": "cd backend && npm install"
   },
   "author": "Beata Kusnierz (https://github.com/bea94k)",
   "license": "MIT",
