--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "cd backend && node app.js",
-    "install": "cd backend && npm install"
+    "build": "rm -R ./backend/build; cd frontend && npm run build; cp -R ./build ../backend",
+    "install": "cd backend && npm install && cd ../frontend && npm install"
   },
   "author": "Beata Kusnierz (https://github.com/bea94k)",
   "license": "MIT",
