--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,7 @@ jobs:
       - uses: akhileshns/heroku-deploy@v3.6.8 # This is the action
         with:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
-          heroku_app_name: "shortyshorty" #Must be unique in Heroku
+          heroku_app_name: "shortyshortyshorty" #Must be unique in Heroku
           heroku_email: "beatakusnierz94@gmail.com"
           usedocker: true
           docker_build_args: |
