--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,10 +15,5 @@ jobs:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
           heroku_app_name: "shortyshortyshorty" #Must be unique in Heroku
           heroku_email: "beatakusnierz94@gmail.com"
-          usedocker: true
-          docker_build_args: |
-            NODE_ENV
-            MONGO_DB_CONNECT
         env:
-          NODE_ENV: production
-          MONGO_DB_CONNECT: ${{ secrets.MONGO_DB_CONNECT }}
+          HD_MONGO_DB_CONNECT: ${{ secrets.MONGO_DB_CONNECT }}
