--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "cd backend && node app.js",
+    "start:dev": "sh -ac '. .env; cd backend && node app.js'",
     "build": "rm -R ./backend/build; cd frontend && npm run build; cp -R ./build ../backend",
     "install": "cd backend && npm install && cd ../frontend && npm install"
   },
