--- a/backend/package.json
+++ b/backend/package.json
@@ -7,8 +7,6 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon app.js"
   },
-  "author": "Beata Kusnierz (https://github.com/bea94k)",
-  "license": "MIT",
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.1",
@@ -18,5 +16,7 @@
   },
   "devDependencies": {
     "nodemon": "^2.0.6"
-  }
+  },
+  "author": "Beata Kusnierz (https://github.com/bea94k)",
+  "license": "MIT"
 }
