--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "description": "Backend of a full-stack web app for shortening URLs",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "start": "nodemon app.js"
   },
   "dependencies": {
@@ -15,6 +15,7 @@
     "path": "^0.12.7"
   },
   "devDependencies": {
+    "jest": "^26.6.3",
     "nodemon": "^2.0.6"
   },
   "author": "Beata Kusnierz (https://github.com/bea94k)",
