--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Full-stack web app for shortening URLs",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "cd backend && npm run test",
     "start": "cd backend && node app.js",
     "start:dev": "sh -ac '. .env; cd backend && node app.js'",
     "build": "rm -R ./backend/build; cd frontend && npm run build; cp -R ./build ../backend",
